<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="319dp"
        android:layout_height="215dp"
        android:background="@drawable/bg_widget"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.483">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/Statistics"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.077"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.060000002" />

        <org.eazegraph.lib.charts.BarChart
            android:id="@+id/chart"
            android:layout_width="250dp"
            android:layout_height="173dp"
            android:layout_weight="1"
            android:padding="6dp"
            android:textAlignment="center"
            app:barrierAllowsGoneWidgets="true"
            app:egBarWidth="5dp"
            app:egFixedBarWidth="false"
            app:egLegendTextSize="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.74" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="320dp"
        android:layout_height="203dp"
        android:background="@drawable/bg_widget"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.938">

        <TextView
            android:id="@+id/textView100"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/achievements"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.077"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.112" />

        <ImageView
            android:id="@+id/imageViewBadge5000"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:onClick="openBadge5000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.365"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.384"
            app:srcCompat="@drawable/badge_5000_unavailable_" />

        <ImageView
            android:id="@+id/imageViewBadge10000"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:onClick="openBadge10000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.665"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.384"
            app:srcCompat="@drawable/badge_10000_unavailable_" />

        <ImageView
            android:id="@+id/imageViewBadge15000"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:onClick="openBadge15000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.942"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.384"
            app:srcCompat="@drawable/badge_15000_unavailable_" />

        <ImageView
            android:id="@+id/imageViewBadge100"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:onClick="openBadge100"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.065"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.384"
            app:srcCompat="@drawable/badge_100" />

        <ImageView
            android:id="@+id/imageViewBadge25000"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:onClick="openBadge25000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.365"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.895"
            app:srcCompat="@drawable/badge_25000_unavailable_" />

        <ImageView
            android:id="@+id/imageViewBadge20000"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:onClick="openBadge20000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.065"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.888"
            app:srcCompat="@drawable/badge_20000_unavailable_" />

        <ImageView
            android:id="@+id/imageViewBadge"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/badge" />

        <TextView
            android:id="@+id/textViewBadge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semibold"
            android:textColor="@color/dark_yellow"
            android:textSize="12sp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewBadge"
            app:layout_constraintEnd_toEndOf="@+id/imageViewBadge"
            app:layout_constraintStart_toStartOf="@+id/imageViewBadge"
            app:layout_constraintTop_toTopOf="@+id/imageViewBadge" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/your_activity"
        android:textColor="@color/Label"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.063" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="319dp"
        android:layout_height="121dp"
        android:background="@drawable/bg_widget"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.168">

        <ProgressBar
            android:id="@+id/progressBarCountSteps"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="101dp"
            android:layout_height="21dp"
            android:max="6000"
            android:progress="1300"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.858"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.633" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/steps"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.083"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.173" />

        <TextView
            android:id="@+id/textViewCurrentSteps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semibold"
            android:textColor="@color/Label"
            android:textSize="26sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.116"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.638" />

        <TextView
            android:id="@+id/textViewPercents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.896"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.326" />

        <TextView
            android:id="@+id/textViewGoalSteps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_medium"
            android:textColor="@color/Label"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewCurrentSteps"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.643" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:clickable="true"
        android:onClick="goToSettings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.96"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.00999999"
        app:srcCompat="@drawable/woman" />

    <Button
        android:id="@+id/button2"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="119dp"
        android:layout_height="36dp"
        android:fontFamily="@font/inter_semibold"
        android:onClick="goToSensors"
        android:text="@string/sensors"
        android:textColor="@color/Label"
        android:textSize="10sp"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView7"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:rippleColor="@color/white" />

    <WebView
        android:layout_width="391dp"
        android:layout_height="64dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="502dp" />

</androidx.constraintlayout.widget.ConstraintLayout>